recursion.logo.tree.Tree.scala.error
Compilation error:
Tree:4: error: type mismatch;
 found   : Unit
 required: java.awt.Color
      setColor(current(step))
                      ^